    mod_div_equality ~> div_mult_mod_eq
    mod_div_equality2 ~> mult_div_mod_eq
    mod_div_equality3 ~> mod_div_mult_eq
    mod_div_equality4 ~> mod_mult_div_eq
    minus_div_eq_mod ~> minus_div_mult_eq_mod
    minus_div_eq_mod2 ~> minus_mult_div_eq_mod
    minus_mod_eq_div ~> minus_mod_eq_div_mult
    minus_mod_eq_div2 ~> minus_mod_eq_mult_div
INCOMPATIBILITY.

* Dedicated syntax LENGTH('a) for length of types.

* New proof method "argo" using the built-in Argo solver based on SMT
technology. The method can be used to prove goals of quantifier-free
propositional logic, goals based on a combination of quantifier-free
propositional logic with equality, and goals based on a combination of
quantifier-free propositional logic with linear real arithmetic
including min/max/abs. See HOL/ex/Argo_Examples.thy for examples.

* Metis: The problem encoding has changed very slightly. This might
break existing proofs. INCOMPATIBILITY.

* Sledgehammer:
  - The MaSh relevance filter is now faster than before.
  - Produce syntactically correct Vampire 4.0 problem files.

* (Co)datatype package:
  - New commands for defining corecursive functions and reasoning about
    them in "~~/src/HOL/Library/BNF_Corec.thy": 'corec', 'corecursive',
    'friend_of_corec', and 'corecursion_upto'; and 'corec_unique' proof
    method. See 'isabelle doc corec'.
  - The predicator :: ('a \<Rightarrow> bool) \<Rightarrow> 'a F \<Rightarrow> bool is now a first-class
    citizen in bounded natural functors.
  - 'primrec' now allows nested calls through the predicator in addition
    to the map function.
  - 'bnf' automatically discharges reflexive proof obligations.
  - 'bnf' outputs a slightly modified proof obligation expressing rel in
       terms of map and set
       (not giving a specification for rel makes this one reflexive).
  - 'bnf' outputs a new proof obligation expressing pred in terms of set
       (not giving a specification for pred makes this one reflexive).