@@ -270,6 +270,8 @@ types where this is really intended.
     minus_div_eq_mod2 ~> minus_mult_div_eq_mod
     minus_mod_eq_div ~> minus_mod_eq_div_mult
     minus_mod_eq_div2 ~> minus_mod_eq_mult_div
+    div_mod_equality' ~> minus_mod_eq_div_mult [symmetric]
+    mod_div_equality' ~> minus_div_mult_eq_mod [symmetric]
 INCOMPATIBILITY.
 
 * Dedicated syntax LENGTH('a) for length of types.
